--- a/style.css
+++ b/style.css
@@ -8,13 +8,114 @@
 }
 
 html {
-  font-size: 62.5%;
+	font-size: 62.5%;
+	font-family: "Lato", sans-serif;
+}
+
+/* * COMMON STYLE PATTERN */
+
+button {
+	background: transparent;
+	border: none;
+	cursor: pointer;
+}
+
+.secondary_heading {
+	font-size: 4rem;
+}
+
+.secondary_summary {
+	font-size: 1.8rem;
+	line-height: 1.5;
+	margin: 2rem 0;
 }
 
 /* * HEADER SECTION STYLE */
 
+.hero_section {
+	background: #e554731a;
+	padding: 5rem 23rem;
+	display: flex;
+	gap: 9.7rem;
+	align-items: center;
+}
 
+.hero_content {
+	max-width: 70rem;
+}
+
+.hero_content h1 {
+	font-size: 8rem;
+	font-weight: 700;
+}
+
+.hero_content p {
+	font-size: 1.8rem;
+	font-weight: 500;
+	margin: 3.2rem 0;
+	line-height: 1.8;
+	letter-spacing: 0.5px;
+}
+
+.hero_btn {
+	background-color: #e55473;
+	padding: 2rem 4.3rem;
+	border-radius: 1rem;
+	color: #fff;
+	font-size: 2rem;
+}
+
+.hero_image img {
+	width: 100%;
+}
 
 /* * MAIN SECTION STYLE */
+
+main {
+	max-width: 114rem;
+	margin: 0 auto;
+}
+
+.feature_flowers {
+	margin: 12rem auto;
+}
+
+.feature_flowers h2,
+.feature_flowers p {
+	text-align: center;
+	max-width: 60rem;
+	margin: 2rem auto;
+}
+
+.feature_flowers figure {
+  display: grid;
+  align-items: end;
+  padding: 0 7rem;
+  height: 40rem;
+  border-radius: 50% 50% 0 0;
+}
+
+.feature_flowers figure:nth-child(1) {
+	background-color: #a7216226;
+}
+
+.feature_flowers figure:nth-child(2) {
+	background-color: #0597a026;
+}
+
+.feature_flowers figure:nth-child(3) {
+	background-color: #477d1126;
+}
+
+.feature_flowers figure img {
+	width: 100%;
+}
+
+.flowers {
+	display: flex;
+	justify-content: center;
+	gap: 2.4rem;
+  margin-top: 5rem; 
+}
 
 /* * FOOTER SECTION STYLE */
